<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.main.MainActivity">

    <include layout="@layout/toolbar_container"/>

    <EditText
            android:id="@+id/searchView"
            android:drawableLeft="@drawable/ic_search_black"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="@dimen/margin_normal"
            android:background="@android:color/white"
            android:elevation="@dimen/cardview_default_elevation"/>

    <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rvHotels"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:orientation="vertical"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/searchView"
            app:layout_constraintBottom_toBottomOf="parent"/>
    <include
            android:layout_height="0dp"
            android:layout_width="0dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar"
            app:layout_constraintBottom_toBottomOf="parent"
            layout="@layout/view_container_loading"/>
</androidx.constraintlayout.widget.ConstraintLayout>
