<?xml version="1.0" encoding="utf-8"?>
<FrameLayout
        xmlns:android="http://schemas.android.com/apk/res/android" xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/flContainerMainLoading"
        android:layout_width="match_parent"
        android:layout_height="match_parent" tools:showIn="@layout/activity_main">
    <ProgressBar
            android:id="@+id/pbLoading"
            android:layout_width="@dimen/pb_normal_size"
            android:layout_height="@dimen/pb_normal_size"
            android:layout_gravity="center"/>
    <TextView
            android:id="@+id/tvPhError"
            android:visibility="gone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/alert_no_results"/>
</FrameLayout>